# python_poetry

./: README.md  pyproject.toml
my_prac/: 01_helloworld.ipynb
