[tool.poetry]
name = "my-prac"
version = "0.1.0"
description = ""
authors = ["Imran691 <mimran691@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
